PACKAGIST HATES ALL CAPS.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "klaude/SHOUTCLOUD_PHP",
+    "name": "klaude/shoutcloud",
     "type": "library",
     "description": "STRTOUPPER IN THE CLOUD",
     "keywords": ["SHOUTCLOUD"],
