DO THE NEW GUZZLE. DO IT EVERY DAY.
USE THE FANCY PSR-7 GUZZLE THAT ALL THE KIDS LOVE. SORRY, PHP 5.4
USERS. SORRY NOT SORRY THAT IS! HA HA!

--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "5.*@stable"
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "@stable"
+        "phpunit/phpunit": "~5.0|~4.8"
     },
     "autoload": {
         "psr-4": {
