--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,6 +20,9 @@
     </testsuites>
 
     <filter>
+        <whitelist>
+            <directory>./src</directory>
+        </whitelist>
         <blacklist>
             <directory>./vendor</directory>
         </blacklist>
