--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 language: php
 
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
+    
 php:
   - "5.6"
   - "7.0"
   - "7.1"
   - "7.2"
   - "7.3"
+  - "7.4"
+  - "8.0"
 
+before_install:
+  - phpenv config-rm xdebug.ini
+  
 before_script:
   - composer install --dev
